--- a/#src/common/footer/_footer.html
+++ b/#src/common/footer/_footer.html
@@ -80,17 +80,17 @@
                         <ul class="social">
                             <li>
                                 <a href="#">
-                                    <img src="img/icons/vk.svg" alt="">
+                                    <svg><use xlink:href="img/icons/sprites.svg#vk"></use></svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="img/icons/insta.svg" alt="">
+                                    <svg><use xlink:href="img/icons/sprites.svg#insta"></use></svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="img/icons/fb.svg" alt="">
+                                    <svg><use xlink:href="img/icons/sprites.svg#fb"></use></svg>
                                 </a>
                             </li>
                         </ul>
