--- a/#src/common/frequently-questions/_frequently-questions.html
+++ b/#src/common/frequently-questions/_frequently-questions.html
@@ -8,7 +8,7 @@
                 <a href="#" class="frequently-questions-card not-hover">
                     <div class="frequently-questions-card__text">Нужно ли периодически менять зубную пасту?</div>
                     <div class="frequently-questions-card__icon">
-                        <img class="img-svg"  src="img/icons/circle-arrow-right.svg" alt="">
+                        <svg><use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use></svg>
                     </div>
                 </a>
             </li>
@@ -16,7 +16,7 @@
                 <a href="#" class="frequently-questions-card not-hover">
                     <div class="frequently-questions-card__text">Как часто нужно делать чистку зубов у стоматолога?</div>
                     <div class="frequently-questions-card__icon">
-                        <img class="img-svg"  src="img/icons/circle-arrow-right.svg" alt="">
+                        <svg><use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use></svg>
                     </div>
                 </a>
             </li>
@@ -24,7 +24,7 @@
                 <a href="#" class="frequently-questions-card not-hover">
                     <div class="frequently-questions-card__text">После одномоментной имплантации в день удаления я уже выйду из клиники с новым зубом?</div>
                     <div class="frequently-questions-card__icon">
-                        <img class="img-svg"  src="img/icons/circle-arrow-right.svg" alt="">
+                        <svg><use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use></svg>
                     </div>
                 </a>
             </li>
@@ -32,7 +32,7 @@
                 <a href="#" class="frequently-questions-card not-hover">
                     <div class="frequently-questions-card__text">В каких случаях применяете седацию, есть ли противопоказания?</div>
                     <div class="frequently-questions-card__icon">
-                        <img class="img-svg"  src="img/icons/circle-arrow-right.svg" alt="">
+                        <svg><use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use></svg>
                     </div>
                 </a>
             </li>
