--- a/#src/common/header/_header.html
+++ b/#src/common/header/_header.html
@@ -4,13 +4,13 @@
             <div class="header__address">
                 <div class="header__address-item">
                     <div class="header__address-icon">
-                        <img src="img/icons/local.svg" alt="">
+                        <svg><use xlink:href="img/icons/sprites.svg#local"></use></svg>
                     </div>
                     ул. Адмирала Коновалова, 2-4
                 </div>
                 <div class="header__address-item">
                     <div class="header__address-icon">
-                        <img src="img/icons/local.svg" alt="">
+                        <svg><use xlink:href="img/icons/sprites.svg#local"></use></svg>
                     </div>
                     Большая Пороховская, 47
                 </div>
@@ -19,17 +19,17 @@
                 <ul class="social">
                     <li>
                         <a href="#">
-                            <img src="img/icons/telegram.svg" alt="">
+                            <svg><use xlink:href="img/icons/sprites.svg#telegram"></use></svg>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/icons/whatsapp.svg" alt="">
+                            <svg><use xlink:href="img/icons/sprites.svg#whatsapp"></use></svg>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/icons/viber.svg" alt="">
+                            <svg><use xlink:href="img/icons/sprites.svg#viber"></use></svg>
                         </a>
                     </li>
                 </ul>
@@ -45,6 +45,7 @@
                 </a>
             </div>
             <nav class="header__menu menu" data-menu>
+                <div class="menu__overlay" data-action="close-menu"></div>
                 <div class="menu__top-line"></div>
                 <div class="menu__head">
                     <div class="menu__phone">
