--- a/#src/common/slider-buttons/_slider-buttons.html
+++ b/#src/common/slider-buttons/_slider-buttons.html
@@ -1,8 +1,8 @@
 <div class="slider-buttons">
     <div class="slider-button slider-button--prev hover">
-        <img class="img-svg" src="img/icons/circle-arrow-left.svg" alt="">
+        <svg><use xlink:href="img/icons/sprites.svg#circle-arrow-left"></use></svg>
     </div>
     <div class="slider-button slider-button--next hover">
-        <img class="img-svg" src="img/icons/circle-arrow-right.svg" alt="">
+        <svg><use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use></svg>
     </div>
 </div>
