--- a/#src/common/team-carousel/_team-carousel.html
+++ b/#src/common/team-carousel/_team-carousel.html
@@ -6,60 +6,60 @@
             <div class="head__subtitle text text-lg-center">Запишитесь к врачам нашей клиники онлайн</div>
             }
         </div>
-        <div class="team-carousel__slider" >
-            <div class="swiper" data-team-carousel-slider>
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <a href="#" class="team-carousel-card not-hover">
-                            <div class="team-carousel-card__calendar">
-                                <img src="img/icons/calendar.svg" alt="">
-                            </div>
-                            <div class="team-carousel-card__name">Екимова Мария</div>
-                            <div class="team-carousel-card__position">стоматолог-терапевт</div>
-                            <div class="team-carousel-card__photo">
-                                <img src="img/photo/team-carousel-card-1.png" alt="">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="#" class="team-carousel-card not-hover">
-                            <div class="team-carousel-card__calendar">
-                                <img src="img/icons/calendar.svg" alt="">
-                            </div>
-                            <div class="team-carousel-card__name">Шахаев Саид</div>
-                            <div class="team-carousel-card__position">стоматолог-ортопед, хирург</div>
-                            <div class="team-carousel-card__photo">
-                                <img src="img/photo/team-carousel-card-2.png" alt="">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="#" class="team-carousel-card not-hover">
-                            <div class="team-carousel-card__calendar">
-                                <img src="img/icons/calendar.svg" alt="">
-                            </div>
-                            <div class="team-carousel-card__name">Маргиева Зарина</div>
-                            <div class="team-carousel-card__position">стоматолог-терапевт</div>
-                            <div class="team-carousel-card__photo">
-                                <img src="img/photo/team-carousel-card-3.png" alt="">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="#" class="team-carousel-card not-hover">
-                            <div class="team-carousel-card__calendar">
-                                <img src="img/icons/calendar.svg" alt="">
-                            </div>
-                            <div class="team-carousel-card__name">Перельштейн Нина</div>
-                            <div class="team-carousel-card__position">стоматолог-ортодонт</div>
-                            <div class="team-carousel-card__photo">
-                                <img src="img/photo/team-carousel-card-4.png" alt="">
-                            </div>
-                        </a>
-                    </div>
+    </div>
+    <div class="team-carousel__slider">
+        <div class="swiper" data-team-carousel-slider>
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <a href="#" class="team-carousel-card not-hover">
+                        <div class="team-carousel-card__calendar">
+                            <svg><use xlink:href="img/icons/sprites.svg#calendar"></use></svg>
+                        </div>
+                        <div class="team-carousel-card__name">Екимова Мария</div>
+                        <div class="team-carousel-card__position">стоматолог-терапевт</div>
+                        <div class="team-carousel-card__photo">
+                            <img src="img/photo/team-carousel-card-1.png" alt="">
+                        </div>
+                    </a>
                 </div>
-                @@include('../slider-buttons/_slider-buttons.html')
+                <div class="swiper-slide">
+                    <a href="#" class="team-carousel-card not-hover">
+                        <div class="team-carousel-card__calendar">
+                            <svg><use xlink:href="img/icons/sprites.svg#calendar"></use></svg>
+                        </div>
+                        <div class="team-carousel-card__name">Шахаев Саид</div>
+                        <div class="team-carousel-card__position">стоматолог-ортопед, хирург</div>
+                        <div class="team-carousel-card__photo">
+                            <img src="img/photo/team-carousel-card-2.png" alt="">
+                        </div>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="#" class="team-carousel-card not-hover">
+                        <div class="team-carousel-card__calendar">
+                            <svg><use xlink:href="img/icons/sprites.svg#calendar"></use></svg>
+                        </div>
+                        <div class="team-carousel-card__name">Маргиева Зарина</div>
+                        <div class="team-carousel-card__position">стоматолог-терапевт</div>
+                        <div class="team-carousel-card__photo">
+                            <img src="img/photo/team-carousel-card-3.png" alt="">
+                        </div>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="#" class="team-carousel-card not-hover">
+                        <div class="team-carousel-card__calendar">
+                            <svg><use xlink:href="img/icons/sprites.svg#calendar"></use></svg>
+                        </div>
+                        <div class="team-carousel-card__name">Перельштейн Нина</div>
+                        <div class="team-carousel-card__position">стоматолог-ортодонт</div>
+                        <div class="team-carousel-card__photo">
+                            <img src="img/photo/team-carousel-card-4.png" alt="">
+                        </div>
+                    </a>
+                </div>
             </div>
+            @@include('../slider-buttons/_slider-buttons.html')
         </div>
     </div>
 </section>
