--- a/#src/index.html
+++ b/#src/index.html
@@ -132,7 +132,7 @@
 							<li>
 								<div class="contact-section__item">
 									<div class="contact-section__label">
-										<img src="img/icons/clock.svg" alt="">
+										<svg><use xlink:href="img/icons/sprites.svg#clock"></use></svg>
 										Время работы
 									</div>
 									<div class="contact-section__text">
@@ -143,7 +143,7 @@
 							<li>
 								<div class="contact-section__item">
 									<div class="contact-section__label">
-										<img src="img/icons/phone.svg" alt="">
+										<svg><use xlink:href="img/icons/sprites.svg#phone"></use></svg>
 										Единый телефон
 									</div>
 									<div class="contact-section__text">
@@ -154,7 +154,7 @@
 							<li>
 								<div class="contact-section__item">
 									<div class="contact-section__label">
-										<img src="img/icons/whatsapp-2.svg" alt="">
+										<svg><use xlink:href="img/icons/sprites.svg#whatsapp-2"></use></svg>
 										WhatsApp / Telegram / Viber
 									</div>
 									<div class="contact-section__text">
@@ -165,7 +165,7 @@
 							<li>
 								<div class="contact-section__item">
 									<div class="contact-section__label">
-										<img src="img/icons/email.svg" alt="">
+										<svg><use xlink:href="img/icons/sprites.svg#email"></use></svg>
 										E-mail
 									</div>
 									<div class="contact-section__text">
@@ -177,13 +177,13 @@
 						<ul class="contact-section__map-list">
 							<li>
 								<div class="contact-section__map">
-									<iframe src="https://yandex.ru/map-widget/v1/-/CCUFNDUd3D" width="560" height="400"
-										frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+									<!-- <iframe src="https://yandex.ru/map-widget/v1/-/CCUFNDUd3D" width="560" height="400"
+										frameborder="1" allowfullscreen="true" style="position:relative;"></iframe> -->
 								</div>
 								<div class="contact-section__map-bottom">
 									<div class="contact-section__map-bottom-col-1">
 										<div class="contact-section__map-bottom-label">
-											<img src="img/icons/local-2.svg" alt="">
+											<svg><use xlink:href="img/icons/sprites.svg#local"></use></svg>
 											Большая Пороховская, 47
 										</div>
 
@@ -191,7 +191,7 @@
 											Красногвардейский район
 										</div>
 										<div class="contact-section__map-bottom-time">
-											<img src="img/icons/clock.svg" alt="">
+											<svg><use xlink:href="img/icons/sprites.svg#clock"></use></svg>
 											Ежедневно 09.00 - 21.00
 										</div>
 									</div>
@@ -202,13 +202,13 @@
 							</li>
 							<li>
 								<div class="contact-section__map">
-									<iframe src="https://yandex.ru/map-widget/v1/-/CCUFNDuJXA" width="560" height="400"
-										frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+									<!-- <iframe src="https://yandex.ru/map-widget/v1/-/CCUFNDuJXA" width="560" height="400"
+										frameborder="1" allowfullscreen="true" style="position:relative;"></iframe> -->
 								</div>
 								<div class="contact-section__map-bottom">
 									<div class="contact-section__map-bottom-col-1">
 										<div class="contact-section__map-bottom-label">
-											<img src="img/icons/local-2.svg" alt="">
+											<svg><use xlink:href="img/icons/sprites.svg#local"></use></svg>
 											ул. Адмирала Коновалова, 2-4
 										</div>
 
@@ -216,7 +216,7 @@
 											Красносельский район, Балтийская жемчужина
 										</div>
 										<div class="contact-section__map-bottom-time">
-											<img src="img/icons/clock.svg" alt="">
+											<svg><use xlink:href="img/icons/sprites.svg#clock"></use></svg>
 											Ежедневно 09.00 - 21.00
 										</div>
 									</div>
