--- a/#src/common/services-card/_services-card.html
+++ b/#src/common/services-card/_services-card.html
@@ -1,4 +1,4 @@
-<a href="#" class="services-card not-hover">
+<div class="services-card">
     <div class="services-card__bg ibg">
         <img src="@@img" alt="">
     </div>
@@ -6,6 +6,6 @@
         <h3 class="services-card__title">@@title</h3>
         <div class="services-card__text">@@text</div>
         <div class="services-card__price">Стоимость от  <strong>@@price</strong> ₽</div>
-        <div class="services-card__btn btn btn--light">Подробнее об услуге</div>
+        <a href="#" class="services-card__btn btn btn--light">Подробнее об услуге</a>
     </div>
-</a>
+</div>
