--- a/#src/common/header/_header.html
+++ b/#src/common/header/_header.html
@@ -44,8 +44,8 @@
                     <img src="img/logo/logo.svg" alt="">
                 </a>
             </div>
+            <div class="menu-overlay" data-action="close-menu"></div>
             <nav class="header__menu menu" data-menu>
-                <div class="menu__overlay" data-action="close-menu"></div>
                 <div class="menu__top-line"></div>
                 <div class="menu__head">
                     <div class="menu__phone">
