--- a/#src/common/promo-header/_promo-header.html
+++ b/#src/common/promo-header/_promo-header.html
@@ -17,7 +17,7 @@
                         <div class="promo-header__text">
                             Мы рады предложить вам передовые методики лечения, специалистов с многолетним опытом работы и современное импортное оборудование
                         </div>
-                        <a href="#" class="promo-header__btn-1 btn btn--light">Подробнее</a>
+                        <a href="#" class="promo-header__btn-1 btn btn--light">Подробнее о клинике</a>
                         <a href="#" class="promo-header__btn-2 btn btn--dark btn-transparent">Записаться на консультацию</a>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                             Мы рады предложить вам передовые методики лечения, специалистов с многолетним опытом работы и современное импортное оборудование
                             Мы рады предложить вам передовые методики лечения
                         </div>
-                        <a href="#" class="promo-header__btn-1 btn btn--light">Подробнее</a>
+                        <a href="#" class="promo-header__btn-1 btn btn--light">Подробнее о клинике</a>
                         <a href="#" class="promo-header__btn-2 btn btn--dark btn-transparent">Записаться на консультацию</a>
                     </div>
                 </div>
