--- a/#src/common/frequently-questions/_frequently-questions.html
+++ b/#src/common/frequently-questions/_frequently-questions.html
@@ -1,4 +1,4 @@
-<section class="frequently-questions padding-wrap">
+<section class="frequently-questions padding-wrap" data-frequently-questions>
     <div class="container-sm">
         <div class="head">
             <h2 class="head__title">Часто задаваемые вопросы</h2>
@@ -8,37 +8,95 @@
                 <a href="#" class="frequently-questions-card not-hover">
                     <div class="frequently-questions-card__text">Нужно ли периодически менять зубную пасту?</div>
                     <div class="frequently-questions-card__icon">
-                        <svg><use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use></svg>
+                        <svg>
+                            <use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use>
+                        </svg>
                     </div>
                 </a>
             </li>
             <li>
                 <a href="#" class="frequently-questions-card not-hover">
-                    <div class="frequently-questions-card__text">Как часто нужно делать чистку зубов у стоматолога?</div>
+                    <div class="frequently-questions-card__text">Как часто нужно делать чистку зубов у стоматолога?
+                    </div>
                     <div class="frequently-questions-card__icon">
-                        <svg><use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use></svg>
+                        <svg>
+                            <use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use>
+                        </svg>
                     </div>
                 </a>
             </li>
             <li>
                 <a href="#" class="frequently-questions-card not-hover">
-                    <div class="frequently-questions-card__text">После одномоментной имплантации в день удаления я уже выйду из клиники с новым зубом?</div>
+                    <div class="frequently-questions-card__text">После одномоментной имплантации в день удаления я уже
+                        выйду из клиники с новым зубом?</div>
                     <div class="frequently-questions-card__icon">
-                        <svg><use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use></svg>
+                        <svg>
+                            <use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use>
+                        </svg>
                     </div>
                 </a>
             </li>
             <li>
                 <a href="#" class="frequently-questions-card not-hover">
-                    <div class="frequently-questions-card__text">В каких случаях применяете седацию, есть ли противопоказания?</div>
+                    <div class="frequently-questions-card__text">В каких случаях применяете седацию, есть ли
+                        противопоказания?</div>
                     <div class="frequently-questions-card__icon">
-                        <svg><use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use></svg>
+                        <svg>
+                            <use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use>
+                        </svg>
                     </div>
                 </a>
             </li>
         </ul>
+        <div class="frequently-questions__list-collapse">
+            <ul class="frequently-questions__list">
+                <li>
+                    <a href="#" class="frequently-questions-card not-hover">
+                        <div class="frequently-questions-card__text">Нужно ли периодически менять зубную пасту?</div>
+                        <div class="frequently-questions-card__icon">
+                            <svg>
+                                <use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use>
+                            </svg>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="frequently-questions-card not-hover">
+                        <div class="frequently-questions-card__text">Как часто нужно делать чистку зубов у стоматолога?
+                        </div>
+                        <div class="frequently-questions-card__icon">
+                            <svg>
+                                <use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use>
+                            </svg>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="frequently-questions-card not-hover">
+                        <div class="frequently-questions-card__text">После одномоментной имплантации в день удаления я
+                            уже выйду из клиники с новым зубом?</div>
+                        <div class="frequently-questions-card__icon">
+                            <svg>
+                                <use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use>
+                            </svg>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="frequently-questions-card not-hover">
+                        <div class="frequently-questions-card__text">В каких случаях применяете седацию, есть ли
+                            противопоказания?</div>
+                        <div class="frequently-questions-card__icon">
+                            <svg>
+                                <use xlink:href="img/icons/sprites.svg#circle-arrow-right"></use>
+                            </svg>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
         <div class="frequently-questions__bottom text-center">
-            <a href="#" class="btn btn--dark">Показать еще</a>
+            <a href="#" class="frequently-questions__see-more btn btn--dark" data-text="Скрыть">Показать еще</a>
         </div>
     </div>
 </section>
