--- a/#src/common/video-testimonials/_video-testimonials.html
+++ b/#src/common/video-testimonials/_video-testimonials.html
@@ -13,8 +13,9 @@
                         <video poster="img/photo/testimonial-poster-1.jpg" data-media-mobile="img/videoForTest.mp4" autoplay="" muted="" loop="" playsinline="" controlslist="nodownload" crossorigin="anonymous">
                             <source src="img/videoForTest.mp4" type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;">
                         </video>
+                        <div class="video-testimonials__grid-item-text"><span>Lorem ipsum dolor sit amet.</span></div>
                     </a>
-                </li>
+                </li> 
                 <li>
                     <a class="video-testimonials__grid-item ibg" data-fancybox href="https://youtu.be/BlOXiHTjIlk">
                         <img src="img/photo/testimonial-poster-2.jpg" alt="">
@@ -28,6 +29,7 @@
                 <li>
                     <a class="video-testimonials__grid-item ibg" data-fancybox href="https://youtu.be/BlOXiHTjIlk">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/BlOXiHTjIlk?autoplay=1&mute=1&controls=0&loop=1&playlist=BlOXiHTjIlk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="video-testimonials__grid-item-text"><span>Lorem ipsum dolor sit amet.</span></div>
                     </a>
                 </li>
                 <li>
