--- a/#src/common/breadcrumbs/_breadcrumbs.html
+++ b/#src/common/breadcrumbs/_breadcrumbs.html
@@ -1,4 +1,4 @@
-<div class="container-sm d-none d-lg-block">
+<div class="container-md d-none d-md-block pt-4">
     <ul class="breadcrumbs">
         @@for (var i = 0; i < arr.length; i++) { <li>`+arr[i]+`</li>
             }
