--- a/#src/common/our-services/_our-services.html
+++ b/#src/common/our-services/_our-services.html
@@ -1,11 +1,13 @@
-<section class="our-services @@lift padding-wrap">
+<section class="our-services @@classMod padding-wrap">
     <div class="container-md">
-        <div class="our-services__head head">
-            <h2 class="head__title">Наши услуги</h2>
-            <div class="head__subtitle text">
-                Мы дарим улыбки, которые меняют жизнь
+        @@ if(title === true) {
+            <div class="our-services__head head">
+                <h2 class="head__title">Наши услуги</h2>
+                <div class="head__subtitle text">
+                    Мы дарим улыбки, которые меняют жизнь
+                </div>
             </div>
-        </div>
+        }
         <ul class="our-services__list">
             <li>
                 @@include('../services-card/_services-card.html', {
