--- a/#src/index.html
+++ b/#src/index.html
@@ -91,7 +91,8 @@
 		</section>
 
 		@@include('common/our-services/_our-services.html',{
-		"lift": "our-services--lift"
+			"title": true,
+			"classMod": "our-services--lift"
 		})
 
 		@@include('common/team-carousel/_team-carousel.html', {
